remove issue of scrollbar
issue is in root element

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     display: flex;
     position: relative;
     width: 100%;
+    overflow: hidden;
 }
 main{
     flex-grow: 1;
